# ELIS-SLR-Agent

./: .agentignore  .claudeignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDITS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CURRENT_PE.md  ELIS_2Agent_Automation_Plan_v2_0.md  ELIS_Containerised_GitHub_Agent_Runtime_Plan.md  ELIS_Data_Sheets_2025-08-19_v1.0.xlsx  ELIS_MultiAgent_Implementation_Plan.md  ELIS_MultiAgent_Implementation_Plan_v1_3.md  ELIS_MultiAgent_Implementation_Plan_v1_5.md  ELIS_MultiAgent_Implementation_Plan_v1_6.md  ELIS_MultiAgent_Implementation_Plan_v1_7.md  ELIS_MultiAgent_Implementation_Plan_v1_8.md  ELIS_MultiAgent_Implementation_Plan_v1_8_2.md  ELIS_MultiAgent_Implementation_Plan_v1_8_3.md  ELIS_MultiAgent_Implementation_Plan_v1_9.md  ELIS_MultiAgent_Implementation_Plan_v2_0.md  ELIS_SLR_AI_Platform_Conceptual_Architecture_v1_6.md  ELIS_SLR_AI_Platform_Conceptual_Architecture_v1_8.md  ELIS_SLR_AI_Platform_Conceptual_Architecture_v1_9.md  ELIS_Token_Usage_Guidelines_Implementation_Plan.md  ELIS_Token_Usage_Guidelines_for_Multi_AI_Agents.md  HANDOFF.md  LESSONS_LEARNED.md  MANIFEST.txt  MANIFEST_sizes.txt  README.md  REVIEW.md  REVIEW_ELIS_2Agent_Automation_Plan_v2_0.md  REVIEW_FT_r5.md  REVIEW_PE-INFRA-SLR-02.md  REVIEW_PE0b.md  (+58 more)
.github/: CODEOWNERS  pull_request_template.md
.openclaw/: workspace-state.json
benchmarks/: README.md
config/: agent_id_migration_map.json  asta_config.yml  asta_extracted_vocabulary.yml  elis_search_queries.yml  pm_loop_control.json  reviewer_identity_map.json  sources.yml
configs/: benchmark_config.yaml
docs/: BENCHMARK_VALIDATION_REPORT.md  BOT_TEST.md  CHANGELOG.md  CHANGE_TEST.md  CI_Housekeeping.md  COMMIT_CONVENTIONS.md  DOCUMENT_CLASSIFICATION.md  Data_Contract_v1.0.md  ELIS_2025_Protocol_Improvements_Summary_v1-41_to_v1-72.md  ELIS_ASTA_Integration_DevPlan.md  ELIS_Agent_Improvements.md  ELIS_Protocol_v2_Considerations.md  ELIS_SLR_Agent_Handover_Note.md  ELIS_SLR_Agent_Handover_Note_2025-08-23.md  ELIS_SLR_Agent_Prompt_v2.0.md  ELIS_SLR_Workflow.md  ELIS_Search_MVP.md  ELIS_Source_Registry.md  ELIS_Update_Protocol_v1.0.md  ELIS_VPS_Implementation_Validation_Plan_v1.1.md  FILE_REVIEW_LEDGER.md  GPT_Profile_Senior_Researcher_ELIS.md  Git_Workflow.md  HARVEST_TEST_PLAN.md  INTEGRATION_PLAN_V2.md  INVENTORY.md  INVENTORY.md)  PM_Glossary_Acronyms.md  Pilot_Plan.md  Plan_to_Begin_SLR_Production.md  Protocol_SLR_Electoral_Integrity_Strategies_ELIS_2025-08-19_v1-41.docx  README.md  REPO_HYGIENE_PLAN_2026-02-05.md  Repository_Creation_Package.md  SLR_Phases_Plan_v2.0.md  (+8 more)
(+1191 files in other folders)
