# Central project configuration for ELIS-SLR-Agent # Keeps all tool settings in one place (PEP 621/PEP 517 style).  [project] name = "elis-slr-agent" version = "0.1.0" description = "ELIS SLR Agent — tools and automations" readme = "README.md" requires-python = ">=3.11"  [tool.black] line-length = 100 target-version = ["py311"] skip-string-normalization = false  [tool.ruff] line-length = 100 target-version = "py311" select = ["E","F","W","I","B","UP","SIM"]  [tool.pytest.ini_options] testpaths = ["tests"] addopts = "-q" python_files = ["test_*.py", "*_test.py"]  [tool.mypy] python_version = "3.11" ignore_missing_imports = true warn_unused_ignores = true warn_redundant_casts = true strict_optional = true