# =============================================================================
# ELIS SLR Agent — Tooling configuration
# Black (format), Ruff (lint), and Pytest defaults.
# =============================================================================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elis-slr-agent"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
  "jsonschema==4.23.0",
  "requests==2.31.0",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = ["black", "ruff", "pytest"]

[project.scripts]
elis = "elis.cli:main"

[tool.setuptools.packages.find]
include = ["elis*"]

[tool.black]
target-version = ["py311"]
line-length = 88
# Black expects a SINGLE regex string for extend-exclude (not a list).
# Multi-line string for readability; anchors are repo-root relative.
extend-exclude = '''
(
  ^json_jsonl/            # generated artefacts
| ^validation_reports/    # CI reports
| ^docs/                  # documentation outputs
| ^schemas/               # JSON Schemas
| ^.github/               # workflows (not Python)
)
'''

[tool.ruff]
target-version = "py311"
line-length = 88
# Paths Ruff should skip entirely
exclude = [
  "json_jsonl",
  "validation_reports",
  ".github",
  "docs",
  "schemas",
  "xploreapi",
]

# New-style linter settings live under [tool.ruff.lint]
[tool.ruff.lint]
# Keep it pragmatic for MVP: runtime/syntax errors only; Black owns formatting.
select = ["E", "F"]      # pycodestyle errors + pyflakes
ignore = ["E501"]        # allow long lines in legacy text/tests/docstrings

[tool.pytest.ini_options]
addopts = "-q --ignore docs/benchmark-1 --ignore docs/benchmark-2 --ignore scripts/test_google_scholar.py"
pythonpath = ["."]
